--- a/index.html
+++ b/index.html
@@ -10,6 +10,44 @@
     <title>Pizza Site</title>
 </head>
 <body>
+    <!-- header section-->
+    <section id="overlay">
+        <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+            <a class="navbar-brand" href="#">
+                <h2>Pizza Hub</h2>
+            </a>
+            <button class="navbar-toggler" type="buttton" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse align-items-center" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Our Variety</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        </section>
+        <main>
+            <section id="home" class="hero">
+                <div class="container h-100">
+                    <div class="row h-100">
+                        <div class="col hero-content text center d-flex flex-column justify-content-center align-items-center">
+                            <h1>WELCOME</h1>
+                            <h1>TO PIZZA-INN</h1>
+                            <h5>Delicious Stuff Waiting For You In A Fun Environment</h5>
+                            <a href="#order" class="btn btn-orange button floater"> Order Now!</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
