--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         <a href="#" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="#" class="nav-link">About </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Our Variety</a>
+                        <a href="#" class="nav-link">Menu</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +46,55 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section><br>
+
+                <!-- about section-->
+            <div id="about us">
+                <div class="container p-4">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/a-image.webp" class="img-fluid rounded-start" alt="bufalo pizza">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h4>About Us</h4>
+                                    <p>We are a fast food restaurant located in Nairobi, along Likoni-Road.Our speciality is in Pizza, we offer refreshing flavours that suite our customers' taste and preferences.</p>
+                                    <p>Check out our menu and choose the size,crust and type of topping you would like.</p>
+                                    <p>More so,we have giveaways on selected days,don't miss out!</p>
+                                    <p>Get a glimpse of endless bliss.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                <!-- menu section-->
+            <div class="container-fluid">
+                <div class="controls-top mt-5">
+                    <h2 class="text-center">Menu</h2>
+                    <div class="row banner">
+                    </div>
+                </div><br>
+                <div class="col-md-2">
+                    <div class="card mb-2">
+                        <img src="assets/h-image.jpg">
+                        <div class="card-body">
+                            <h4 class="card-title">Hawaaian Pizza</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card mb-2">
+                        <img src="assets/h-image.jpg" >
+                        <div class="card-body">
+                            <h4 class="card-title">Hawaaian Pizza</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                
         </main>
 
     <script src="js/jquery.js"></script>
