--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <div class="col-md-3">
                                     <div class="view-over-lay">
                                         <div class="image-frame">
-                                            <img src="/assets/v-image.jpeg" class="img-fluid" alt="sample image">
+                                            <img src="./assets/v-image.jpeg" class="img-fluid" alt="sample image">
                                             <h4>Viggie Pizza</h4>
                                         </div>
                                     </div>
