--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <div class="col-md-3">
                                     <div class="view-over-lay">
                                         <div class="image-frame">
-                                            <img src="/assets/ha-image.jpg" class="img-fluid" alt="sample image">
+                                            <img src="./assets/ha-image.jpg" class="img-fluid" alt="sample image">
                                             <h4>Hawaaian Pizza</h4>
                                         </div>
                                     </div>
@@ -91,7 +91,7 @@
                                 <div class="col-md-3">
                                     <div class="view-over-lay">
                                         <div class="image-frame">
-                                            <img src="/assets/m-image.jpeg" class="img-fluid" alt="sample image">
+                                            <img src="./assets/m-image.jpeg" class="img-fluid" alt="sample image">
                                             <h4>Margherita Pizza</h4>
                                         </div>
                                     </div>
@@ -99,7 +99,7 @@
                                 <div class="col-md-3">
                                     <div class="view-over-lay">
                                         <div class="image-frame">
-                                            <img src="/assets/me-image.webp" class="img-fluid" alt="sample image">
+                                            <img src="./assets/me-image.webp" class="img-fluid" alt="sample image">
                                             <h4>Meat Pizza</h4>
                                         </div>
                                     </div>
@@ -107,7 +107,7 @@
                                 <div class="col-md-3">
                                     <div class="view-over-lay">
                                         <div class="image-frame">
-                                            <img src="/assets/p-image.jpg" class="img-fluid" alt="sample image">
+                                            <img src="./assets/p-image.jpg" class="img-fluid" alt="sample image">
                                             <h4>Pepperoni Pizza</h4>
                                         </div>
                                     </div>
@@ -117,7 +117,7 @@
                                 <div class="col-md-3">
                                     <div class="view-over-lay">
                                         <div class="image-frame">
-                                            <img src="/assets/h-image.jpg" class="img-fluid" alt="sample image">
+                                            <img src="./assets/h-image.jpg" class="img-fluid" alt="sample image">
                                             <h4>Works Pizza</h4>
                                         </div>
                                     </div>
